Switched to static c library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.15)
 
 project(cgltf)
 
 add_library(cgltf_static STATIC cgltf_stub.c)
+
+set_property(TARGET cgltf_static PROPERTY
+    MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 set_source_files_properties(cgltf_stub.c PROPERTIES LANGUAGE C)
 
