--- a/cgltf-beef/BeefProj.toml
+++ b/cgltf-beef/BeefProj.toml
@@ -7,6 +7,8 @@ StartupObject = "cgltf.Program"
 DefaultNamespace = "cgltf"
 
 [Configs.Debug.Win64]
-CLibType = "DynamicDebug"
 LibPaths = ["$(ProjectDir)/dist/Debug-Win64/cgltf.lib"]
 PreprocessorMacros = ["DEBUG", "USE_SPAN"]
+
+[Configs.Release.Win64]
+LibPaths = ["$(ProjectDir)/dist/Release-Win64/cgltf.lib"]
