--- a/cgltf-beef/BeefProj.toml
+++ b/cgltf-beef/BeefProj.toml
@@ -5,10 +5,10 @@ Name = "cgltf-beef"
 TargetType = "BeefLib"
 StartupObject = "cgltf.Program"
 DefaultNamespace = "cgltf"
+ProcessorMacros = ["USE_SPAN"]
 
 [Configs.Debug.Win64]
 LibPaths = ["$(ProjectDir)/dist/Debug-Win64/cgltf.lib"]
-PreprocessorMacros = ["DEBUG", "USE_SPAN"]
 
 [Configs.Release.Win64]
 LibPaths = ["$(ProjectDir)/dist/Release-Win64/cgltf.lib"]
